<resources>
    <string name="app_name">WeatherApp</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear</string>
    <string name="favorite">Favorite</string>
    <string name="data">Data</string>
    <string name="temp">Temp</string>
    <string name="weather_icon">Weather icon</string>
    <string name="feels_like">Feels like</string>
    <string name="min_max">min/max</string>
    <string name="weather_description">Description</string>
    <string name="feels_like_temp">0</string>
    <string name="max">max</string>
    <string name="min">min</string>
</resources>