<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_weather_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/data"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/temp"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/weather_icon"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:contentDescription="@string/weather_icon"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/max"
        app:layout_constraintBottom_toTopOf="@+id/feels_like"
        app:layout_constraintEnd_toStartOf="@id/min_temp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/min"
        app:layout_constraintBottom_toTopOf="@+id/feels_like_temp"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weather_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/weather_description"
        app:layout_constraintBottom_toTopOf="@+id/min_temp"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/feels_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feels_like_temp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/feels_like_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:text="@string/feels_like_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>